--- a/Interfaz-tfg/app/src/main/res/values/colors.xml
+++ b/Interfaz-tfg/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="titulo">#840051</color>
+    <color name="eslogan">#34052D</color>
 </resources>
