--- a/Interfaz-tfg/app/src/main/res/values/colors.xml
+++ b/Interfaz-tfg/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="titulo">#840051</color>
     <color name="eslogan">#34052D</color>
+    <color name="botones1">#543585</color>
 </resources>
