--- a/Interfaz-tfg/app/src/main/res/values/colors.xml
+++ b/Interfaz-tfg/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="botones1">#543585</color>
     <color name="botones2">#D06589</color>
     <color name="fondo">#F6F6F6</color>
+    <color name="VipBox">#42BF34A1</color>
+    <color name="ocre">#C9A42C</color>
+
+
 </resources>
